--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_STRING = "mongodb://localhost:27017/BUYZIT"
+DB_STRING = mongodb+srv://admin:arv0725@buyzit-1.nugeu.mongodb.net/?retryWrites=true&w=majority&appName=Buyzit-1
