--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.6.2",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "vercel": "^44.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
